# PetroChat-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PetroChat-Agent项目结构说明书-Python版.docx  README.md  docker-compose.yml  pyproject.toml  ~$troChat-Agent项目结构说明书-Python版.docx
data/: schema.md  sql_examples.yaml
docker/mysql/init/: 001_demo_schema.sql
docs/: 1.1-business-domain.md  1.1-业务领域文档.md  1.2-user-requirements.md  1.2-用户需求文档.md  1.3-data-documentation.md  1.3-数据文档.md  1.4-tools-api.md  1.4-工具与API接口文档.md  1.5-permission-security.md  1.5-权限与安全文档.md  1.6-evaluation-criteria.md  1.6-评测标准文档.md  Phase10.1-评估质量门禁.md  Phase10.2-真实Agent回放基线.md  Phase11-上下文与长期记忆流程.md  Phase5.9-评估展示报告.md  Phase8.4-Docker演示环境.md  Phase9.1-权限生产化.md  Phase9.2-数据保留与清理任务.md  README.md  memory-eval-frontend-roadmap.md  v1.1-记忆评估与前端规划.md
docs/sql/: phase11_context_summary_migration.sql  phase11_context_summary_tables.sql  phase6_1_memory_tables.sql
frontend/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/docker/: nginx.conf
frontend/src/: App.vue  styles.css
frontend/src/data/: evaluationSummary.js
frontend/src/services/: chatStream.js
scripts/: ask.py  ask_sql.py  check.py  cleanup_retention.py  convert_doc.py  dump_schema.py  eval_golden_set.py  hash_password.py  ingest.py  rebuild_mem0_index.py  replay_golden_set.py  run_agent_baseline.py
src/petrochat/: __init__.py  main.py
src/petrochat/app/: __init__.py  retention.py
src/petrochat/app/agent/: __init__.py  graph.py  prompts.py
src/petrochat/app/agent/nodes/: __init__.py  agent_node.py  general_node.py  qa_node.py  sql_node.py  supervisor_node.py
src/petrochat/app/api/: __init__.py  admin.py  auth.py  evaluation.py  memory.py  routes.py
src/petrochat/app/core/: __init__.py  config.py  llm.py  models.py  observability.py  state.py
src/petrochat/app/evaluation/: __init__.py  baseline.py  golden_set.py  replay.py
src/petrochat/app/mcp/: __init__.py  client.py  server.py
src/petrochat/app/memory/: __init__.py  context.py  long_term.py  mem0_adapter.py  policy.py  store.py  summary.py
src/petrochat/app/quality/: __init__.py
src/petrochat/app/rag/: __init__.py  parser.py  retriever.py  vector_store.py
src/petrochat/app/report/: __init__.py  chart.py  formatter.py
src/petrochat/app/sql/: __init__.py  agent.py  engine.py  executor.py  generator.py  schema.py  validator.py
src/petrochat/app/tools/: __init__.py  lookup.py  retrieve.py  sql_tool.py  units.py
tests/: conftest.py  test_agent_baseline.py  test_api.py  test_core.py  test_golden_set_eval.py  test_golden_set_replay.py  test_graph.py  test_mcp.py  test_memory.py  test_parser.py  test_report.py  test_retention.py  test_retriever.py  test_smoke.py  test_sql_engine.py  test_sql_executor.py  test_sql_validator.py  test_supervisor.py  test_tools.py  test_vector_store.py
