[project]
name = "petrochat-agent"
version = "0.1.0"
description = "石化领域智能问答与质检 Agent 平台 —— 基于 LangGraph + RAG + MCP + 多 Agent 协作"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Cameron Patel" },
]

# ====================================================================
# 第一阶段（RAG 问答）必要依赖
# 后续阶段会逐步加入：mcp（第三阶段）、更多评估工具（第四阶段）等
# ====================================================================
dependencies = [
    # ---- LangGraph / LangChain 编排核心 ----
    "langgraph>=0.2.50,<2.0",
    "langchain>=0.3.0,<1.0",
    "langchain-core>=0.3.0,<1.0",
    "langchain-community>=0.3.0,<1.0",
    "langchain-openai>=0.2.0,<1.0",   # 用 OpenAI 兼容协议调 DeepSeek / 阿里云百炼

    # ---- 向量库（HTTP 客户端模式，Chroma 服务由 Docker 跑）----
    # 设计决策：
    # 1. 用 chromadb-client 而非 chromadb：前者只含 HTTP 客户端，不含 hnswlib C++ 扩展，
    #    Windows 上无需装 MSVC 编译；且更贴近生产形态（向量库都是独立服务）。
    # 2. 不引入 langchain-chroma：它会硬依赖完整版 chromadb 反过来拉回 hnswlib。
    #    放弃后直接用原生 chromadb HttpClient API，能学到向量库的每个原子操作（学习目标）。
    "chromadb-client>=0.5.20,<1.0",

    # ---- Web 框架 & SSE ----
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "sse-starlette>=2.1.0,<3.0",

    # ---- 配置 / 数据校验 ----
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.5.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",

    # ---- 文档解析 ----
    "python-docx>=1.1.0,<2.0",        # 解析 .docx 规范文件
    "langchain-text-splitters>=0.3.0,<1.0",  # RecursiveCharacterTextSplitter（二次切分）

    # ---- 可观测性 ----
    "langsmith>=0.1.140,<1.0",        # 链路追踪
    "loguru>=0.7.2,<1.0",             # 友好的日志

    # ---- HTTP / 工具 ----
    "httpx>=0.27.0,<1.0",
    "tenacity>=9.0.0,<10.0",          # 重试装饰器
]

[project.optional-dependencies]
# 开发依赖：测试 + Lint
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "ruff>=0.7.0,<1.0",
]

# ====================================================================
# 构建配置：src-layout
# ====================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petrochat"]

# ====================================================================
# 开发依赖组（新版 uv 规范，替代旧的 [tool.uv] dev-dependencies）
# 用法：uv sync --group dev
# ====================================================================
[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "ruff>=0.7.0,<1.0",
]

# ====================================================================
# Ruff（lint + format，替代 black + isort + flake8）
# ====================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff 自身规则
]
ignore = [
    "E501",  # 行长由 formatter 控制
]

[tool.ruff.format]
quote-style = "double"

# ====================================================================
# pytest
# ====================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
