[project]
name = "petrochat-agent"
version = "1.0.0"
description = "石化领域智能问答与质检 Agent 平台 —— LangGraph + RAG + Tool Calling + MCP + 多 Agent 协作"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Cameron Patel" }]

dependencies = [
    "langgraph>=0.2.50,<2.0",
    "langchain>=0.3.0,<1.0",
    "langchain-core>=0.3.0,<1.0",
    "langchain-community>=0.3.0,<1.0",
    "langchain-openai>=0.2.0,<1.0",
    "chromadb-client>=0.5.20,<1.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "sse-starlette>=2.1.0,<3.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.5.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "python-docx>=1.1.0,<2.0",
    "langchain-text-splitters>=0.3.0,<1.0",
    # MCP（第三阶段）
    "mcp>=1.2.0,<2.0",
    "langchain-mcp-adapters>=0.1.0,<0.2",
    # MySQL + NL2SQL + 报表（第四阶段）
    "sqlalchemy>=2.0.30,<3.0",
    "pymysql>=1.1.0,<2.0",
    "cryptography>=42.0.0,<46.0",  # pymysql 8.0 caching_sha2_password 必须
    "pandas>=2.2.0,<3.0",
    "sqlglot>=23.0,<27.0",          # SQL AST 解析（安全校验）
    "matplotlib>=3.8.0,<4.0",
    "pyyaml>=6.0,<7.0",
    # 可观测性
    "langsmith>=0.1.140,<1.0",
    "loguru>=0.7.2,<1.0",
    # HTTP / 工具
    "httpx>=0.27.0,<1.0",
    "tenacity>=9.0.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "ruff>=0.7.0,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petrochat"]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "ruff>=0.7.0,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
